# brobot

./: .gitignore  README.md  main.py  pyproject.toml
src/brobot/: __init__.py
src/brobot/analysis/: figures.py  tables.py
src/brobot/experiments/: config.py  metrics.py  runner.py
src/brobot/filters/: base.py  kld.py  mpf.py  ra.py  sir.py
src/brobot/filters/components/: kld_sampling.py  mutation.py  resampling.py  smoothing.py  vpior.py
src/brobot/sim/: maps.py  motion.py  raycast.py  sensor.py  trajectory.py  world.py
tests/: test_filters.py  test_maps.py  test_raycast.py  test_world.py
