[project]
name = "brobot"
version = "0.1.0"
description = "Monte Carlo Localization variants for mobile robotics"
readme = "README.md"
authors = [
    { name = "Andrei Biswas" },
    { name = "Rishabh Kumar" },
    { name = "Rishi Srikaanth" },
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "numba>=0.60",
    "matplotlib>=3.8",
    "scipy>=1.12",
    "pandas>=2.2",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
